// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render BatteryMeasure component with full battery charge 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="row mb-4 justify-content-evenly align-items-center border rounded p-4 shadow"
      >
        <div
          class="col-md-2"
        >
          <i
            class="bi bi-car-front fs-1"
          />
        </div>
        <div
          class="col-md-7"
        >
          <p
            class="m-0 fw-bold"
          >
            London
          </p>
          <p
            class="m-0 text-secondary"
          >
            London
            , 
            England, UK
          </p>
        </div>
        <div
          class="col-md-3 d-flex align-items-center"
        >
          <i
            class="bi bi-battery-full fs-1"
          />
          <span
            class="fw-bold mx-2"
          >
            100
            %
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="row mb-4 justify-content-evenly align-items-center border rounded p-4 shadow"
    >
      <div
        class="col-md-2"
      >
        <i
          class="bi bi-car-front fs-1"
        />
      </div>
      <div
        class="col-md-7"
      >
        <p
          class="m-0 fw-bold"
        >
          London
        </p>
        <p
          class="m-0 text-secondary"
        >
          London
          , 
          England, UK
        </p>
      </div>
      <div
        class="col-md-3 d-flex align-items-center"
      >
        <i
          class="bi bi-battery-full fs-1"
        />
        <span
          class="fw-bold mx-2"
        >
          100
          %
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should render BatteryMeasure component with lower battery charge 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="row mb-4 justify-content-evenly align-items-center border rounded p-4 shadow"
      >
        <div
          class="col-md-2"
        >
          <i
            class="bi bi-car-front fs-1"
          />
        </div>
        <div
          class="col-md-7"
        >
          <p
            class="m-0 fw-bold"
          >
            London
          </p>
          <p
            class="m-0 text-secondary"
          >
            London
            , 
            England, UK
          </p>
        </div>
        <div
          class="col-md-3 d-flex align-items-center"
        >
          <i
            class="bi bi-battery-half fs-1"
          />
          <span
            class="fw-bold mx-2"
          >
            65
            %
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="row mb-4 justify-content-evenly align-items-center border rounded p-4 shadow"
    >
      <div
        class="col-md-2"
      >
        <i
          class="bi bi-car-front fs-1"
        />
      </div>
      <div
        class="col-md-7"
      >
        <p
          class="m-0 fw-bold"
        >
          London
        </p>
        <p
          class="m-0 text-secondary"
        >
          London
          , 
          England, UK
        </p>
      </div>
      <div
        class="col-md-3 d-flex align-items-center"
      >
        <i
          class="bi bi-battery-half fs-1"
        />
        <span
          class="fw-bold mx-2"
        >
          65
          %
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
